Removed code which prevented moodle from upgrading. Removed additional spacing around header.

--- a/style/custom.css
+++ b/style/custom.css
@@ -79,7 +79,6 @@ a:focus {
 }
 
 #above-header {
-	padding: 10px 0px;
 	border-bottom: 1px solid #3c469c;
 }
 
